src/app/pages/deck-detail/deck-detail.component.css
.hide-scroll::-webkit-scrollbar {
  display: none; /* Chrome */
}

.hide-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

mat-paginator {
  background-color: transparent;
}

.poke-card {
  height: 8.5rem;
  width: max-content;
  position: relative;
}

.poke-card img {
  height: 100%;
}

@media (min-width: 768px) {
  .poke-card {
    height: min-content;
  }
}

.poke-card.my-deck:hover::after {
  background: rgb(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
  border-radius: 0.5rem;
  content: "Toque para remover";
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  color: white;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

